# two_qubits_separable_povm_enforce_cp

./: .gitignore  calibrations_2025_07_22__12_00_02.json  example_config.json  example_training.py  preprocess_data.py  pyproject.toml  requirements.txt  template_train_with_orbax.py  train_with_orbax.py
datasets/: q15_q16_250ns_2025-08-05_FILTERED_DATASET.job  q15_q16_250ns_2025-08-05_SPAM_COUNTS.npy
results_spam_estimation/: q15_q16_250ns_2025-08-05_SPAM_ESTIMATION.job
saved_models/: lindblad_two_qubits_depth_6_width_256.eqx
src/two_q_sep_cp/SPAM_estimation/: gates.py  misc.py
src/two_q_sep_cp/config_dict/: config_dict_states_measurements.json  initial_states_str_2q.json  pauli_measurements_str_2q.json
src/two_q_sep_cp/neural_ode/: cp_projection.py  main.py  model.py  representations.py  utils.py
tests/: dual_gens_set.joblib  gens_set.joblib  test_lindbladian.py
